[Material][Mac] Fix for Bookmark Button's highlight issues

BUG=618979

Review-Url: https://codereview.chromium.org/2089743002
Cr-Commit-Position: refs/heads/master@{#401167}

Former-commit-id: 054f2cbda89f48d6c2022c39bc70df417f8012ab